--- a/assembler/src/Properties/Resources.resx
+++ b/assembler/src/Properties/Resources.resx
@@ -117,13 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BranchTooFarAwayFromLabel" xml:space="preserve">
+    <value>The Branch instruction is too far away from the label {0} (offset is larger than 16 bits).</value>
+  </data>
   <data name="LabelDefinedTwice" xml:space="preserve">
     <value>Label {0} was defined more than once.</value>
   </data>
   <data name="LabelNotDefined" xml:space="preserve">
     <value>Label {0} was never defined.</value>
   </data>
+  <data name="SignedOverflow" xml:space="preserve">
+    <value>The signed value {0} doesn't fit inside {1} bits.</value>
+  </data>
   <data name="SyntaxError" xml:space="preserve">
     <value>Syntax Error.</value>
+  </data>
+  <data name="UnsignedOverflow" xml:space="preserve">
+    <value>The unsigned value {0} doesn't fit inside {1} bits.</value>
   </data>
 </root>
